failed tries to self update